--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,9 @@
             
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="https://varnomen.hgvs.org/">2015</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://williamop.github.io/WilliamForITOfficer/">2016</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://waveform-906.appspot.com/">WaveForm</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://varnomen.hgvs.org/">Variant Nomenclature</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://williamop.github.io/WilliamForITOfficer/">Campaign</a></li>
             </ul>
         </div>
     </nav>
