--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="http://waveform-906.appspot.com/">WaveForm</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://varnomen.hgvs.org/">Variant Nomenclature</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://williamop.github.io/WilliamForITOfficer/">Campaign</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://campaign.williamhong.me">Campaign</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://resume.williamhong.me">Resume</a></li>
             </ul>
         </div>
     </nav>
